[package]
name = "game"
version = "0.1.0"
authors = ["Ryan1729 <Ryan1729@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.6"
rand_xorshift = "0.1.1"

[dependencies.features]
path = "../features"

[dependencies.platform_types]
path = "../platform_types"

[dependencies.rendering]
path = "../rendering"

[dev-dependencies]
quickcheck = "0.8"

[features]
default = []
invariant-checking = ["features/invariant-checking"]
logging = ["features/logging"]
